--- a/src/app/Models/home/Home/home/home.component.html
+++ b/src/app/Models/home/Home/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-
+    <!-- Home content start -->
     <div class="container">
         <div class="row pt-4 pb-4">
             <div class="col-sm-6 p-4 mt-auto mb-auto">
@@ -34,7 +34,9 @@
         </div>
     </div>
 </div>
+<!-- Home content end -->
 
+<!-- Home content image start-->
 <div class="container">
     <div class="row mt-4 mb-4 swiper-wrapper flex-nowrap justify-content-center p-4">
         <div class="col-12 col-sm-6 col-md-4 product-banner-item p-0">
@@ -48,7 +50,9 @@
         </div>
     </div>
 </div>
+<!-- Home content image end-->
 
+<!-- Home content Best Products section start-->
 <div class="container">
     <div class="content_section">
         <div class="heading section-title text-center">
@@ -391,12 +395,16 @@
         </div>
     </div>
 </div>
+<!-- Home content Best Products section end-->
 
+<!-- Home content collection section start-->
 <div class="container">
     <div class="row">
-        <div class="mb-4 d-flex flex-wrap flex-sm-nowrap gap-4 justify-content-center align-items-center p-4 collections">
+        <div
+            class="mb-4 d-flex flex-wrap flex-sm-nowrap gap-4 justify-content-center align-items-center p-4 collections">
             <div class="col-12 col-sm-6 product-collection-item p-0">
-                <img src="../../../../../assets/home image/supper collection/d1.webp" class="collecimg" style="margin-left: -3px;">
+                <img src="../../../../../assets/home image/supper collection/d1.webp" class="collecimg"
+                    style="margin-left: -3px;">
             </div>
             <div class="col-12 col-sm-6 product-collection-item p-0">
                 <img src="../../../../../assets/home image/supper collection/d2.webp" class="collecimg">
@@ -404,7 +412,9 @@
         </div>
     </div>
 </div>
+<!-- Home content collection section end-->
 
+<!-- Home content Tranding section start-->
 <div class="container">
     <div class="content_section">
         <div class="heading section-title text-center">
@@ -582,10 +592,13 @@
         </div>
     </div>
 </div>
+<!-- Home content Tranding section end-->
 
+<!-- Home content Offer section start-->
 <div class="container">
     <div class="row">
-        <div class="mb-4 d-flex flex-wrap justify-content-around gap-lg-4 gap-3 flex-lg-nowrap align-items-center collections">
+        <div
+            class="mb-4 d-flex flex-wrap justify-content-around gap-lg-4 gap-3 flex-lg-nowrap align-items-center collections">
             <div class="col-12 col-sm-6 col-md-3 product-collection-item p-0">
                 <img src="../../../../../assets/card-image/tranding/offers/c1.webp" class="collecimg">
             </div>
@@ -601,3 +614,52 @@
         </div>
     </div>
 </div>
+<!-- Home content Offer section end-->
+
+<!-- Home content Latest Blog section start-->
+<div class="container">
+    <div class="content_section pb-0">
+        <div class="heading section-title text-center">
+            <h1 class="title">Tranding</h1>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="blog_content mb-4 col-12 d-flex flex-wrap">
+            <div class="col-12 col-md-6 blog_content_img mb-md-0 mb-4">
+                <div class="col-12 bg-successes">
+                    <img src="../../../../../assets/home image/Latest Blog/1.webp" alt="" class="img-fluid">
+                </div>
+                <div class="blog_content_des">
+                    <h1>Fashion</h1>
+                    <a href="https//:www.google.com"> Hot Summer Fashion for Women new collections arrives of Lorem
+                        Ipsum available.</a>
+                </div>
+                <div class="blog_content_auth d-flex align-items-center">
+                    <div class="auth_thumbnail">
+                        <img src="../../../../../assets/home image/Latest Blog/author01.webp" alt="" class="img-fluid">
+                    </div>
+                    <a href="https//:www.google.com">Arry twentyk</a>
+                    <span>13 Feb 2021</span>
+                </div>
+            </div>
+            <div class="col-12 col-md-6 blog_content_img">
+                <div class="col-12 bg-successes">
+                    <img src="../../../../../assets/home image/Latest Blog/2.webp" alt="" class="img-fluid">
+                </div>
+                <div class="blog_content_des">
+                    <h1>Fashion</h1>
+                    <a href="https//:www.google.com"> My Favorite White Sneakers From Splurge To Save passages available amet suite.</a>
+                </div>
+                <div class="blog_content_auth d-flex align-items-center">
+                    <div class="auth_thumbnail">
+                        <img src="../../../../../assets/home image/Latest Blog/author02.webp" alt="" class="img-fluid">
+                    </div>
+                    <a href="https//:www.google.com">Arry twentyk</a>
+                    <span>13 Feb 2021</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Home content Latest Blog section end-->
