--- a/src/app/Models/home/Home/home/home.component.html
+++ b/src/app/Models/home/Home/home/home.component.html
@@ -649,7 +649,8 @@
                 </div>
                 <div class="blog_content_des">
                     <h1>Fashion</h1>
-                    <a href="https//:www.google.com"> My Favorite White Sneakers From Splurge To Save passages available amet suite.</a>
+                    <a href="https//:www.google.com"> My Favorite White Sneakers From Splurge To Save passages available
+                        amet suite.</a>
                 </div>
                 <div class="blog_content_auth d-flex align-items-center">
                     <div class="auth_thumbnail">
@@ -663,3 +664,34 @@
     </div>
 </div>
 <!-- Home content Latest Blog section end-->
+
+
+<!-- Home content Connect with us section start-->
+<div class="container">
+    <div class="row">
+        <div class="col-12 Connect_with_us">
+            <div class="col-11 col-sm-10 col-md-9 col-lg-8 col-xl-7 col-xxl-6 Connect_with_input">
+                <h1>Connect with us | merier</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <div class="inputemailarea">
+                    <input type="email" placeholder="Email Address"> 
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telegram" viewBox="0 0 16 16">
+                        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.287 5.906c-.778.324-2.334.994-4.666 2.01-.378.15-.577.298-.595.442-.03.243.275.339.69.47l.175.055c.408.133.958.288 1.243.294.26.006.549-.1.868-.32 2.179-1.471 3.304-2.214 3.374-2.23.05-.012.12-.026.166.016.047.041.042.12.037.141-.03.129-1.227 1.241-1.846 1.817-.193.18-.33.307-.358.336a8.154 8.154 0 0 1-.188.186c-.38.366-.664.64.015 1.088.327.216.589.393.85.571.284.194.568.387.936.629.093.06.183.125.27.187.331.236.63.448.997.414.214-.02.435-.22.547-.82.265-1.417.786-4.486.906-5.751a1.426 1.426 0 0 0-.013-.315.337.337 0 0 0-.114-.217.526.526 0 0 0-.31-.093c-.3.005-.763.166-2.984 1.09z"/>
+                      </svg>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Home content Connect with us section end-->
+
+<!-- Home content Connect footer section start-->
+<div class="container">
+    <div class="row">
+        <div class="col-12 footer_section">
+            
+        </div>
+    </div>
+</div>
+<!-- Home content Connect footer section end-->
+
