--- a/src/app/Models/home/Home/home/home.component.html
+++ b/src/app/Models/home/Home/home/home.component.html
@@ -694,7 +694,7 @@
             <div class="row">
                 <div class="col-12 footer-head">
                     <div class="col-3 about_description">
-                        <div><img src="../../../../../assets/nav image/logo.png" alt="logo"></div>
+                        <div class="img"><img src="../../../../../assets/nav image/logo.png" alt="logo"></div>
                         <p>Merier fashion is simply dummy text of the printing and typesetting industry.</p>
                         <div class="social-icons">
 
@@ -719,9 +719,15 @@
 
                         </div>
                     </div>
-                    <div class="col-3 Ecommerce_description">sdsd</div>
-                    <div class="col-3 Support_description">sdfadfg</div>
-                    <div class="col-3 Products_description">sdfgsgdfg</div>
+                    <div class="col-3 Ecommerce_description">
+                        <h4>Ecommerce</h4>
+                    </div>
+                    <div class="col-3 Support_description">
+                        <h4>Support</h4>
+                    </div>
+                    <div class="col-3 Products_description">
+                        <h4>Products</h4>
+                    </div>
                 </div>
             </div>
 
