--- a/src/app/Models/home/Home/home/home.component.html
+++ b/src/app/Models/home/Home/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <!-- Home content start -->
-    <div class="container">
+    <div class="container" id="Navigate-to-Home">
         <div class="row pt-4 pb-4">
             <div class="col-sm-6 p-4 mt-auto mb-auto">
                 <h1 class="text-uppercase sub-title">hurry up!</h1>
@@ -56,7 +56,7 @@
 <div class="container">
     <div class="content_section">
         <div class="heading section-title text-center">
-            <h1 class="title">Best Products</h1>
+            <h1 class="title" id="Best_Products">Best Products</h1>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
         </div>
         <div class="cards">
@@ -418,15 +418,14 @@
 <div class="container">
     <div class="content_section">
         <div class="heading section-title text-center">
-            <h1 class="title">Tranding</h1>
+            <h1 class="title" id="my-Cart-Items">Tranding</h1>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
         </div>
         <div class="cards">
             <div class="row g-4">
-                <div class="col-sm-6 col-lg-4 mb-6 ">
+                <div class="col-sm-6 col-lg-4 mb-6 " id="Tranding">
                     <div class="card product-item" style="width: 100%;">
                         <div class="img-hover">
-
                             <div class="card-img-top">
                                 <img src="../../../../../assets/card-image/tranding/1.webp">
                             </div>
@@ -478,10 +477,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-lg-4 mb-6 ">
+                <div class="col-sm-6 col-lg-4 mb-6">
                     <div class="card product-item" style="width: 100%;">
                         <div class="img-hover">
-
                             <div class="card-img-top">
                                 <img src="../../../../../assets/card-image/tranding/2.webp">
                             </div>
@@ -620,7 +618,7 @@
 <div class="container">
     <div class="content_section pb-0">
         <div class="heading section-title text-center">
-            <h1 class="title">Tranding</h1>
+            <h1 class="title" id="Tranding_blog">Tranding</h1>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
         </div>
     </div>
@@ -750,3 +748,9 @@
     </div>
 </div>
 <!-- Home content Connect footer section end-->
+
+<button (click)="topFunction()" id="myBtn" title="Go to top">
+    <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-arrow-up-circle" viewBox="0 0 16 16">
+    <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z"/>
+  </svg>
+</button>
