--- a/src/app/Models/home/Home/home/home.component.scss
+++ b/src/app/Models/home/Home/home/home.component.scss
@@ -674,3 +674,23 @@
         }
     }
 }
+
+#myBtn {
+    display: none; 
+    position: fixed; 
+    bottom: 20px; 
+    right: 30px; 
+    z-index: 99; 
+    border: none; 
+    outline: none; 
+    background-color: red; 
+    color: white; 
+    cursor: pointer; 
+    padding: 10px; 
+    border-radius: 50%; 
+    font-size: 18px; 
+}
+
+#myBtn:hover {
+    background-color: #555; 
+} 
