--- a/src/app/Models/home/Home/home/home.component.scss
+++ b/src/app/Models/home/Home/home/home.component.scss
@@ -616,6 +616,29 @@
             line-height: 1.2;
             margin-top: 0;
             color: #1D3557;
+            position: relative;
+            &::after{
+                content: "";
+                width: 75px;
+                height: 2px;
+                background-color: #E63946;
+                position: absolute;
+                top: 30px;
+                left: 0px;
+            }
+        }
+        ul{
+            padding: 0px;
+            li{
+                list-style: none;
+                margin: 0 0 20px;
+                color: #457B9D;
+                font-size: 15px;
+                font-weight: 500;
+                cursor: pointer;
+                font-family: "Roboto", sans-serif, Arial, Helvetica, sans-serif;
+                transition: all 0.5s ease 0s;
+            }
         }
     }
     .Support_description{
@@ -627,7 +650,17 @@
             font-weight: 600;
             line-height: 1.2;
             margin-top: 0;
+            position: relative;
             color: #1D3557;
+            &::after{
+                content: "";
+                width: 75px;
+                height: 2px;
+                background-color: #E63946;
+                position: absolute;
+                top: 30px;
+                left: 0px;
+            }
         }
     }
     .Products_description{
@@ -641,16 +674,17 @@
             margin-top: 0;
             color: #1D3557;
             position: relative;
-          
+            &::after{
+                content: "";
+                width: 75px;
+                height: 2px;
+                background-color: #E63946;
+                position: absolute;
+                top: 30px;
+                left: 0px;
+            }
         }
-        &::after{
-            width: 20px;
-            height: 5px;
-            background-color: #E63946;
-            position: absolute;
-            top: 0;
-            left: 0;
-        }
+        
     }
    
 }
@@ -690,7 +724,21 @@
     border-radius: 50%; 
     font-size: 18px; 
 }
-
+.Shop_Now{
+    height: 100%;
+    &:focus{
+        outline: none;
+        box-shadow: none;
+    }
+}
+.cards{
+    button{
+        &:focus{
+            outline: none;
+            box-shadow: none;
+        }
+    }
+}
 #myBtn:hover {
     background-color: #555; 
 } 
