--- a/src/app/Models/home/Home/home/home.component.html
+++ b/src/app/Models/home/Home/home/home.component.html
@@ -689,9 +689,8 @@
 <div class="container">
     <div class="row">
         <div class="col-12 footer_section">
-            <div class="row">
-                <div class="col-12 footer-head">
-                    <div class="col-3 about_description">
+            <div class="row footer-head">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3 about_description">
                         <div class="img"><img src="../../../../../assets/nav image/logo.png" alt="logo"></div>
                         <p>Merier fashion is simply dummy text of the printing and typesetting industry.</p>
                         <div class="social-icons">
@@ -715,7 +714,7 @@
                             </svg>
                         </div>
                     </div>
-                    <div class="col-3 Ecommerce_description">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3 Ecommerce_description">
                         <h4>Ecommerce</h4>
                         <div>
                             <ul>
@@ -727,13 +726,29 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-3 Support_description">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3 Support_description">
                         <h4>Support</h4>
+                        <div>
+                            <ul>
+                                <li>Help</li>
+                                <li>Live Chat</li>
+                                <li>Product Detail</li>
+                                <li>Tracking</li>
+                            </ul>
+                        </div>
                     </div>
-                    <div class="col-3 Products_description">
+                    <div class="col-12 col-sm-6 col-md-4 col-lg-3 Products_description">
                         <h4>Products</h4>
+                        <div>
+                            <ul>
+                                <li>Man</li>
+                                <li>Women</li>
+                                <li>KID</li>
+                                <li>Jackets</li>
+                                <li>Others</li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
             </div>
 
             <div class="footer d-flex align-items-center justify-content-between">
